--- a/index.html
+++ b/index.html
@@ -65,7 +65,41 @@
     <div class="main_content_top">
         <!-- home -->
        <aside>
+        <!-- list  -->
+        <div>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-house"></i>
+                        Home
+                    </a>
+                </li>
 
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        Stats
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-signal"></i>
+                        Signals
+                    </a>
+
+                </li>
+            </ul>
+        </div>
+        <!-- admin -->
+        <div>
+            <span>
+                <a href="#">
+                    <i class="fa-solid fa-gear"></i>
+                    Admin
+                </a>
+            </span>
+        </div>
        </aside>
        <!-- content -->
         <div id="main_content_bottom">
