--- a/index.html
+++ b/index.html
@@ -136,6 +136,39 @@
 
             <!-- boolean with bread crumbs -->
             <div id="main_top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6">
+                            <div>
+                                <span>Boolean</span>
+                                <span>ciao</span>
+
+                            </div>
+
+                            <div>
+                                <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
+                                    <ol class="breadcrumb">
+                                      <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                    </ol>
+                                  </nav>            
+                            </div>
+
+                        </div>
+
+                        <div class="col-3">
+                            <p>studenti online negli ultimi 30 min</p>
+                            <h2>125</h2>
+                        </div>
+
+                        <div class="col-3 text-center">
+                            <span>nuovo studente</span>
+                            <i class="fa-regular fa-square-plus"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <!-- data -->
