breadcrumbs and prossime classi

--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
                         <div class="col-6">
                             <div>
                                 <span>Boolean</span>
-                                <span>ciao</span>
-
+                                <span>Piano blaze</span>                                
                             </div>
 
                             <div>
                                 <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                      <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
-                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
-                                      <li class="breadcrumb-item active" aria-current="page">Library</li>
+                                      <li class="breadcrumb-item"><a href="#">3 app</a></li>
+                                      <li  class="breadcrumb-item" aria-current="page">Boolean mobile app</li>
+                                      <li  aria-current="page">Boolean webb app</li>
+                                      <li  aria-current="page">Boolean blog app</li>
+
                                     </ol>
                                   </nav>            
                             </div>
@@ -181,12 +181,286 @@
                                 <!-- prossime classi -->
                                 <div class="card">
                                     <div class="card-header">
-                                      Prossime classi
+                                      <h3>Prossime classi</h3>
+
                                     </div>
                                     <ul class="list-group list-group-flush">
-                                      <li class="list-group-item">An item</li>
-                                      <li class="list-group-item">A second item</li>
-                                      <li class="list-group-item">A third item</li>
+                                      <li class="list-group-item">
+                                        <div class="row">
+                                            <div class="col-4">Nome</div>
+                                            <div class="col-2">Data inizio</div>
+                                            <div class="col-2">ROI</div>
+                                            <div class="col-2">Stato</div>
+                                            <div class="col-2 text-center">Azioni</div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+                                        <div class="row d-flex align-items-center">
+                                            <div class="col-4">
+                                                <i class="fa-solid fa-code"></i>
+                                                Classe 75
+                                            </div>
+                                            <div class="col-2">15 Feb 2021</div>
+                                            <div class="col-2">20%</div>
+                                            <div class="col-2">
+                                                <span class="label">
+                                                    Done
+                                                </span>
+                                            </div>
+                                            <div class="col-2">
+                                               <div class="row justify-content-between">
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-pen"></i>
+                                                        </button>
+                                                    </div>
+
+                                                    <div class="col-6">
+                                                        <button type="button" class="btn btn-outline-secondary">
+                                                            <i class="fa-solid fa-trash"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+
+                                            </div>
+                                        </div>
+                                      </li>
+
+                                      <li class="list-group-item">
+
                                     </ul>
                                   </div>
                             </div>
