--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             <div id="main_top">
                 <div class="container">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-md-4 col-lg-6">
                             <div>
                                 <span>Boolean</span>
-                                <span class="label">Piano blaze</span>                                
+                                <span class="label blue">Piano blaze</span>                                
                             </div>
 
                             <div>
@@ -165,12 +165,12 @@
 
                         </div>
 
-                        <div class="col-3">
+                        <div class="col-12 col-md-4 col-lg-3">
                             <p>studenti online negli ultimi 30 min</p>
                             <h3>125</h3>
                         </div>
 
-                        <div class="col-3 text-center">
+                        <div class="col-12 col-md-4 col-lg-3 text-center">
                             <span>nuovo studente</span>
                             <button type="button" class="btn btn-outline-light">
                                 <i class="fa-solid fa-plus"></i>
@@ -193,7 +193,7 @@
                                     <div class="card-header">
                                       <h3>Prossime classi</h3>
                                     </div>
-                                    <table class="table">
+                                    <table class="table text-center">
                                         <thead>
                                             <tr>
                                                 <th scope="col">Nome</th>
