icon bell responsive update

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                     </div>
                 </div>
             </div>
+            <div class="col-1 d-lg-none">
+                <i class="fa-solid fa-bell"></i>
+
+            </div>
         </div>
 
     </div>
@@ -285,9 +289,8 @@
                                     <table class="table text-center">
                                         <thead>
                                             <tr>
-                                                <th scope="col">Nome</th>
-                                                <th class="d-none d-sm-block" scope="col">Data inizio</th>
-                                                <th class="d-none d-sm-block" scope="col">ROI</th>
+                                                <th scope="col">Data inizio</th>
+                                                <th scope="col">ROI</th>
                                                 <th scope="col">Stato</th>
                                                 <th scope="col">Azioni</th>
                                             </tr>
