--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
 
        <!-- content -->
         <div id="main_content_bottom">
-
-            <!-- boolean with bread crumbs -->
+            <!-- nav bar boolean blu -->
             <div id="main_top">
                 <div class="container">
                     <div class="row">
+                        
+                        <!-- boolean with bread crumbs -->
                         <div class="col-12 col-md-4 col-lg-6">
                             <div>
                                 <span>Boolean</span>
@@ -173,12 +174,12 @@
                             </div>
 
                         </div>
-
+                        <!-- online student -->
                         <div class="col-12 col-md-4 col-lg-3">
                             <p>studenti online negli ultimi 30 min</p>
                             <h3>125</h3>
                         </div>
-                       
+                        <!-- new student with button and form -->
                         <div class="col-12 col-md-4 col-lg-3">
                             <span>nuovo studente</span>
                             <button type="button" class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
