--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <h3>125</h3>
                         </div>
                         <!-- new student with button and form -->
-                        <div class="col-12 col-md-4 col-lg-3">
+                        <div class="col-12 col-md-4 col-lg-3 order-first order-md-last py-3">
                             <span>nuovo studente</span>
                             <button type="button" class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                                 <i class="fa-solid fa-plus"></i>
