--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <!-- boolean with bread crumbs -->
                         <div class="col-12 col-md-4 col-lg-6">
                             <div>
-                                <span>Boolean</span>
+                                <h3>Boolean</h3>
                                 <span class="label blue">Piano blaze</span>                                
                             </div>
 
